<resources>
    <string name="app_name">Notepad</string>
    <string name="unlock">Unlock</string>
    <string name="confirm_pattern">Confirm your screen lock PIN,Pattern or Password</string>
    <string name="setting_label"><![CDATA[Please set the screen lock Manually by navigating to : Settings>Security.]]></string>
    <string name="unlock_success">Unlock successful.</string>
    <string name="unlock_failed">Failed to Unlock Notepad.</string>
    <string name="device_is_secure">NotePad is now secure.</string>
    <string name="security_device_cancelled">Notepad is not secure or user cancelled the request.</string>
    <string name="important_Enabled">This Note has been marked important, authentication will be required.</string>
    <string name="important_Disabled">You can access this note without any authentication.</string>
    <string name="compose_shortcut_short_label1">Notepad</string>
    <string name="compose_shortcut_long_label1">Notepad</string>
    <string name="compose_disabled_message1">disabled</string>
    <string name="compose_shortcut_short_label2">NotesList</string>
    <string name="compose_shortcut_long_label2">Notes List</string>
    <string name="importantOff">importantOff</string>
    <string name="importantOn">importantOn</string>
    <string name="Banner">ca-app-pub-8428592077917623~9528816950</string>
    <string name="compose_disabled_message2">disabled</string>
    <string name="title_activity_notepad_list_drawer">Notepad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_notepad">About Notepad</string>
    <string name="large_text">
        "***About the Application.***\n\n"

        "1. A light weight application to take notes, So that you can concentrate on bigger things in life.\n"
        "2. Your data is backed up securely (So much that even we can’t access it) to restore during application reinstalls.\n"
        "3. To avoid those overly curious people whom you give your phone to, there is authentication requirement for marked notes.\n"
        "4. Hassel free operation as your data is saved instantaneous (every moment literally not even kidding).\n"
        "5. This application support across devices of various screen sizes. Whatever it is Phones, tablets, 16:9, 18:9 phablets we got you covered. \n"
        "6. Share the saved notes via any application which supports text or save the notes as a text file.\n"
        "7. Browse to open a text file (.txt) and save them to notes or to save as a different text file.\n\n"
        "8. Set up a reminder for your notes(BETA). \n\n"

        "***Things you could expect from this application:*** \n\n"

        "1. Support across devices. \n"
        "2. Secure - no way to read the date unless saved to text file. \n"
		"3. Stared Notes requires authentication for any modifications.\n"
		"4. Fool proof feature to prevent deleting of Stared Notes.\n"
        "5. Light weight application – not a resource hungry app. \n"
        "6. Save to a .txt file. \n"
        "7. Open any .txt files. \n"
        "8. Share the content across device via text. \n \n"

		"***Things we expect from this application.*** \n \n"

		"1. Your kind and valuable feedback to help us grow. \n"
		"2. A little love in share our application with others. \n \n"

		"***About us.*** \n"

		"The contents of this were developed from the scratch, and all the contents are ©Copyright protected. Any infringement will be subject to copyright law. \n"

    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
