<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="Notepad"
        android:enabled="true"
        android:icon="@drawable/appshortcuts"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/compose_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="raptorcorp.notepad"
            android:targetClass="raptorcorp.notepad.NotepadHome" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="ContactUs"
        android:enabled="true"
        android:icon="@drawable/phone"
        android:shortcutShortLabel="@string/compose_shortcut_short_label2"
        android:shortcutLongLabel="@string/compose_shortcut_long_label2"
        android:shortcutDisabledMessage="@string/compose_disabled_message2">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="raptorcorp.notepad"
            android:targetClass="raptorcorp.notepad.ContactusActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>